Fix compilation with libc++. Workaround for QTBUG-25960.

Due to QTBUG-25960, compilation would fail with libc++ when STL algorithms
are used with Qt iterators. This patch works around the issue.

This should also fix compilation on OSX and FreeBSD, where Clang and libc++
is used by default.

BUG: 324075
FIXED-IN: 2.8.1
BACKPORT