src/playlistgenerator/ConstraintSolver.cpp
@@ -16,6 +16,11 @@
 
 #define DEBUG_PREFIX "APG::ConstraintSolver"
 
+// WORKAROUND for QTBUG-25960. Required for Qt versions < 4.8.5 in combination with libc++.
+#define QT_NO_STL 1
+    #include <qiterator.h>
+#undef QT_NO_STL
+
 #include "ConstraintSolver.h"
 
 #include "Constraint.h"
